# marshmallow_cbor

./: CHANGELOG.rst  LICENSE  README.rst  cwt_example.py  setup.cfg  setup.py  tox.ini
.github/workflows/: codeqa-test.yml  publish.yml
examples/: cwt.py  dcc.py  person.py  tags.py
marshmallow_cbor/: __init__.py  fields.py  schema.py
tests/: test_fields.py  test_schema.py
