[metadata]
name = marshmallow_cbor
description = Marshmallow support for CBOR encoding
long_description = file: README.rst
author = Kio Smallwood
author_email = kio@mothers-arms.co.uk
project_urls =
    Source Code = https://github.com/Sekenre/marshmallow_cbor
    Issue Tracker = https://github.com/Sekenre/marshmallow_cbor/issues
license = MIT
keywords =
    marshmallow
    serialization
    rest
    cbor
    api
    marshal
    marshalling
    deserialization
    validation
    schema
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    marshmallow >= 3.8
    cbor2 >= 5.4

[options.extras_require]
test =
    pytest
    pytest-cov
    base45
doc =
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0

[tool:pytest]
addopts = -vs --cov --doctest-modules
testpaths = tests examples
doctest_optionflags = NORMALIZE_WHITESPACE

[coverage:run]
source = marshmallow_cbor
#relative_files = true

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
exclude = .tox,build,docs
